--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.97MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.84MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.01MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.51MB/s(Youtube:不良林), server: 152.89.210.105, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇨🇳 台湾-2.84MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇧🇷 巴西-457.9KB/s(Youtube:不良林), server: 138.118.175.28, port: 31320, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: vus5.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus5.0bad.com}}
+  - {name: 🇨🇳 中国-9.37MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.76MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇨🇳 中国-7.50MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.23MB/s(Youtube:不良林), server: 152.89.210.105, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: vus5.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus5.0bad.com}}
+  - {name: 🇺🇸 美国-441.7KB/s(Youtube:不良林), server: azrb.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: azrb.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-371.5KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.84MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-457.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
