--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.37MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.76MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇨🇳 中国-7.50MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.23MB/s(Youtube:不良林), server: 152.89.210.105, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: vus5.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus5.0bad.com}}
-  - {name: 🇺🇸 美国-441.7KB/s(Youtube:不良林), server: azrb.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: azrb.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-371.5KB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.90MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-475.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 台湾-2.05MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-2.91MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-4.07MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-543.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-6.28MB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
+  - {name: 🇨🇳 中国-2.79MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-441.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
