--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.90MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-475.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 台湾-2.05MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇫🇷 法国-2.91MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-4.07MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-543.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-6.28MB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
-  - {name: 🇨🇳 中国-2.79MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: ehez.dingzige.gq, port: 80, type: vmess, uuid: 6a6a6771-b885-4e99-a959-47d4107815d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /dingzi, ws-headers: {Host: ehez.dingzige.gq}}
+  - {name: 🇸🇬 新加坡-2.28MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-234.7KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.35MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.21MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.38MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇦 加拿大-428.1KB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-475.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-234.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-428.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
